# SO8T

./: .cursorrules  .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  Modelfile  Modelfile-SO8T-Phi3-Vision-Enhanced  Modelfile_AEGIS_0.8  Modelfile_AEGIS_08  PROJECT_STRUCTURE.md  README.md  README_SO8T_4ROLE_COMPLETE.md  README_UV_INSTALLATION.md  aegis_v2_test_config.json  analyze_dataset.py  auto_train.bat  bulk_rename_AEGIS_to_aegis.bat  check_datasets.py  check_environment.py  check_gguf_help.bat  check_gguf_metadata.bat  check_json.py  check_tfmc.py  commit_message.txt  dataset_candidates.json  docker-compose.yml  elyza_execution_log.txt  elyza_run_log.txt  example.env  fix_unicode.py  inspect_phi3.py  inspect_soul.py  install_so8t_dependencies.bat  pet_schedule_experiment.py  play_audio.py  play_audio_direct.ps1  pyproject.toml  rename_gguf_files.bat  rename_gguf_files.ps1  (+22 more)
.specstory/: .gitignore
.streamlit/: config.toml
_docs/: 2025-01-08_main_SO8T統合自動パイプライン実装.md  2025-01-27_SO8Tの魂を守る実装指針.md  2025-01-27_SO8T安全エージェント人格分析.md  2025-01-27_so8t_knowledge_distillation.md  2025-01-27_安全崩壊分析と対策実装.md  2025-01-27_現実解SO8T実装方針.md  2025-01-27_第2世代SO8T改善ロードマップ.md  2025-01-29_qwen2vl_to_so8t_gguf_conversion.md  2025-01-29_so8t_comprehensive_testing_implementation.md  2025-10-27_8bit_QLoRA完全確認完了.md  2025-10-27_8bit量子化CPUオフロード修正完了.md  2025-10-27_Qwen2.5-7B-Instruct_SO8群マルチヘッドアテンション導入完了.md  2025-10-27_Qwen2.5-7B-Instruct完全書き換え完了.md  2025-10-27_SO8T_Transformer完全書き換え完了.md  2025-10-27_SO8Tマルチヘッドアテンション完全実装.md  2025-10-27_SO8T三重推論Triality完全実装.md  2025-10-27_SO8T安全エージェント完全実装.md  2025-10-27_SO8T群Transformer_GGUF変換完全実装.md  2025-10-27_SO8T群構造実装強化.md  2025-10-27_SO8群Triality対称性完全解明.md  2025-10-27_SO8群構造絶対保持.md  2025-10-27_SO8群構造超メモリ効率化.md  2025-10-27_bitsandbytes緊急修正完了.md  2025-10-27_group_monitor_Half精度対応完了.md  2025-10-27_データ型不一致エラー修正完了.md  2025-10-27_安全重視SO8T実装.md  2025-10-27_完全パイプライン実行開始.md  2025-10-28_11-44-20_SO8T_Models_各種テスト結果.md  2025-10-28_11-50-00_SO8T_Models_性能テスト結果.md  2025-10-28_12-11-23_SO8T_Phi31_Mini_128K_Quantization_Results.md  2025-10-28_12-45-00_SO8T_Phi31_包括的テスト結果.md  2025-10-28_CursorびAgent音声通知機能実装完了.md  2025-10-28_GGUFファイル使用方法.md  2025-10-28_Ollama謗ｨ隲悶ユ繧ｹ繝亥､ｱ謨励Ο繧ｰ.md  2025-10-28_Qwen3-4B-SO8T_8bit_GGUF変換完了.md  2025-10-28_SO8T_Complex_Problems_Test_Results_2025-10-28_04-57-17.md  2025-10-28_SO8T_Models_総合テスト結果.md  2025-10-28_SO8T_Ollama32_Enhanced_GGUF化完了ログ.md  2025-10-28_SO8T_Ollama32_Enhanced_テスト結果_手動版.md  2025-10-28_SO8T_Ollama32_Enhanced_実装完了ログ.md  (+288 more)
adapters/: gguf_export_notes.md  hf_patch.py  lora_setup.py
agents/: cli.py
benchmarks/: benchmark_ollama.py  prompts.json  visualize_quantization.py
chk/: safety_baseline_report.md  so8t_default_vocab.json
configs/: SO8T-Phi31-LMStudio-Enhanced-config.json  ab_test_borea_phi35.yaml  ab_test_so8t_complete.yaml  abc_test_config.json  aegis_v2_optimized_config.json  automated_so8t_pipeline.yaml  coding_focused_retraining_config.yaml  complete_ab_test_post_processing_config.yaml  complete_automated_ab_pipeline.yaml  complete_so8t_pipeline.yaml  dashboard_config.yaml  data_pipeline_config.yaml  eval_default.yaml  evaluation_config.yaml  finetune_and_ab_test_config.yaml  finetune_borea_japanese.yaml  finetune_ja_qlora.yaml  generate_soul_weights.yaml  gguf_benchmark_models.json  hf_upload_config.yaml  inference_config.yaml  lora.json  nsfw_drug_detection_qlora_training_data_pipeline_config.yaml  promptfoo_config.yaml  safety_tags.json  (+29 more)
(+1416 files in other folders)
